; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_SwapMouseButtons.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/win32nt/ntuser/extr_NtUserCallOneParam.c_Test_OneParamRoutine_SwapMouseButtons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i64 0, align 8
@_ONEPARAM_ROUTINE_SWAPMOUSEBUTTON = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Test_OneParamRoutine_SwapMouseButtons() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @TRUE, align 8
  %3 = load i32, i32* @_ONEPARAM_ROUTINE_SWAPMOUSEBUTTON, align 4
  %4 = call i64 @NtUserCallOneParam(i64 %2, i32 %3)
  %5 = load i64, i64* @FALSE, align 8
  %6 = load i32, i32* @_ONEPARAM_ROUTINE_SWAPMOUSEBUTTON, align 4
  %7 = call i64 @NtUserCallOneParam(i64 %5, i32 %6)
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* %1, align 8
  %9 = load i64, i64* @TRUE, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @TEST(i32 %11)
  %13 = load i64, i64* @FALSE, align 8
  %14 = load i32, i32* @_ONEPARAM_ROUTINE_SWAPMOUSEBUTTON, align 4
  %15 = call i64 @NtUserCallOneParam(i64 %13, i32 %14)
  store i64 %15, i64* %1, align 8
  %16 = load i64, i64* %1, align 8
  %17 = load i64, i64* @FALSE, align 8
  %18 = icmp eq i64 %16, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @TEST(i32 %19)
  ret void
}

declare dso_local i64 @NtUserCallOneParam(i64, i32) #1

declare dso_local i32 @TEST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
